add time periods menu

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p>Get your greeting <a href="/hello">here</a></p>
+    <h1>Time Periods</h1>
+    <ol>
+        <li>Global Prehistory</li>
+        <li>Ancient Mediterreanean</li>
+        <li>Early Europe & Colonial Americas</li>
+        <li>Later Europe & Americas</li>
+        <li>Indigenous Americas</li>
+        <li>Africa</li>
+        <li>West & Central Asia</li>
+        <li>South, East, and Southeast Asia</li>
+        <li>The Pacific</li>
+        <li>Global Contemporary</li>
+    </ol>
 </body>
 </html>
